[project]
name = "ampyr"
version = "0.1.0"
description = "Spotify Web API client engine."
authors = [
    {name = "Keenan W. Wilkinson", email = "keenanwilkinson@outlook.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
