[project]
name = "ampyr"
version = "0.1.0"
description = "Spotify Web API client engine."
authors = [
    {name = "Keenan W. Wilkinson", email = "keenanwilkinson@outlook.com"},
]
dependencies = [
    "requests>=2.28.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.971",
    "yapf>=0.32.0",
    "pytest>=7.1.2",
    "python-dotenv>=0.20.0",
    "types-requests>=2.28.8",
    "pytest-cov>=3.0.0",
    "toml>=0.10.2",
]
